--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,3 +3,9 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="{{ "/assets/bower/bootstrap/dist/js/bootstrap.min.js" | prepend: site.baseurl  }}"></script>
+
+<!-- Flexslider -->
+<script src="{{ "/assets/bower/flexslider/jquery.flexslider-min.js" | prepend: site.baseurl }}"></script>
+
+<!-- Custom js -->
+<script src="{{ "/assets/js/custom.js" | prepend: site.baseurl  }}"></script>
