--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,5 +1,7 @@
 body {
 	margin-top: 4em;
+	//font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;                                            
+	font-family: 'Open Sans',Arial,sans-serif;                                            
 }
 
 article.excerpt {
