--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,12 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-<!-- Custom Fonts -->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800     italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700itali     c,900,900italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="{{ "/assets/bower/font-awesome/css/font-awesome.min.css" | prepend: site.ba     seurl  }}" type="text/css">
+	<!-- Flexslider -->
+	<link rel="stylesheet" href="{{ "/assets/bower/flexslider/flexslider.css" | prepend: baseurl }}">
+
+  <!-- Custom Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ "/assets/bower/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl  }}" type="text/css">
+
 </head>
