--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
 
     {% include header.html %}
 
-		<div class="container">
+		<div class="container-fluid">
+			<div class="row">
     {{ content }}
+			</div>
 		</div>
 
 		{% include foot.html %}
