Añado el logo y meto una imagen en doc md

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,9 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a href="/" class="navbar-brand page-scroll">{{ site.title  }}</a>
+      <a href="/" class="navbar-brand page-scroll"><img
+        src="{{"/assets/images/logo.png" | prepend: site.baseurl}}"
+      class="site-logo">{{ site.title  }}</a>
 		</div>
 		<div>
 			<div id="navbar-collapse" class="collapse navbar-collapse">
